<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:background="@color/colorCardViewBg"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"

        app:cardElevation="@dimen/cardview_default_elevation"
        app:contentPadding="@dimen/cardview_content_padding"
        app:cardCornerRadius="@dimen/margin_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="@dimen/margin_start"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:contentPadding="@dimen/cardview_compat_inset_shadow">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_photo_black_24dp"/>
            </android.support.v7.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_image"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="50dp"
                android:theme="@style/CircularProgress"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_orignal_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orignal_language"
                android:layout_toStartOf="@+id/tv_release_date"
                android:layout_marginEnd="@dimen/text_margin"
                />
            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/cv_image_view"
                android:text="@string/movie_title"
                android:layout_below="@+id/tv_orignal_language"
                android:layout_marginTop="10dp"
                android:typeface="normal"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/colorTextTitle"
                android:layout_marginStart="@dimen/margin_start"
                android:textSize="@dimen/text_title_size"/>

            <TextView
                android:id="@+id/tv_movie_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_movie_title"
                android:layout_toEndOf="@+id/cv_image_view"
                android:text="@string/movie_description"
                android:maxLines="8"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/margin_start"/>

            <TextView
                android:id="@+id/tv_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_image_view"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="10dp"
                android:text="@string/adult"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>